--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".authentication.LoginActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logo"
         android:layout_width="300dp"
