--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,17 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity">
+    tools:context=".cart.CartActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal"
+        android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
-            android:id="@+id/imageview_otp_back_arrow"
+            android:id="@+id/imageview_back_arrow"
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_gravity="center_vertical"
@@ -29,18 +30,73 @@
             android:id="@+id/textview_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OTP Verification"
+            android:text="Your Cart"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:textSize="18sp"
+            android:layout_margin="10dp"
             android:textColor="@color/black"
             android:fontFamily="@font/poppins_semibold"
-            app:layout_constraintStart_toEndOf="@id/imageview_otp_back_arrow"
+            app:layout_constraintStart_toEndOf="@id/imageview_back_arrow"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_cart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
+        app:layout_constraintBottom_toTopOf="@id/cv_total">
+
+    </androidx.recyclerview.widget.RecyclerView>
+    <LinearLayout
+        android:id="@+id/ll_empty_cart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
+        app:layout_constraintBottom_toTopOf="@id/cv_total">
+        <TextView
+            android:id="@+id/tv_empty_cart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Your Cart is empty!"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+
+            android:fontFamily="@font/poppins_bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+
+           />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bt_start_shopping"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_button_ng"
+            android:text="Continue Shoping"
+            android:textColor="@color/colorPrimary"
+            android:layout_gravity="center_vertical"
+            android:textStyle="bold"
+            android:layout_margin="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_empty_cart"/>
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_total"
         android:layout_width="match_parent"
@@ -50,10 +106,12 @@
         app:cardCornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_toolbar">
+
+        app:layout_constraintBottom_toTopOf="@id/bt_cart_continue">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
@@ -74,6 +132,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/poppins_regular"/>
                 <TextView
+                    android:id="@+id/tv_sub_total"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="$30.25"
@@ -95,6 +154,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/poppins_regular"/>
                 <TextView
+                    android:id="@+id/tv_delivery_fee"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="$0.00"
@@ -116,6 +176,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/poppins_regular"/>
                 <TextView
+                    android:id="@+id/tv_tax"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="$5.00"
@@ -124,6 +185,10 @@
                     android:gravity="end"
                     android:fontFamily="@font/poppins_semibold"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/light_gray"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -137,6 +202,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/poppins_bold"/>
                 <TextView
+                    android:id="@+id/tv_total"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="$35.00"
@@ -150,16 +216,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_total">
 
-    </androidx.recyclerview.widget.RecyclerView>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_cart_continue"
         android:layout_width="match_parent"
