--- a/app/src/main/res/layout/activity_thankyou.xml
+++ b/app/src/main/res/layout/activity_thankyou.xml
@@ -5,14 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThankyouActivity">
-    <ImageView
+    tools:context=".payment.ThankyouActivity">
+    <cdflynn.android.library.checkview.CheckView
         android:id="@+id/imageview_success"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/checked"
         android:scaleType="centerCrop"
         android:layout_marginTop="100dp"
+        app:checkView_strokeWidth="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +28,7 @@
         android:fontFamily="@font/poppins_bold"
         android:layout_margin="15dp"
         android:textSize="28sp"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageview_success"
@@ -37,6 +39,7 @@
         android:layout_height="wrap_content"
         android:text="Thank you for yoour order! We will devliver your order shortley"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:fontFamily="@font/poppins_regular"
         android:layout_margin="15dp"
@@ -46,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@id/textview_success_message"
         />
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_proceed_to_payment"
+        android:id="@+id/button_back_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
