--- a/app/src/main/res/layout/drawer_category_item.xml
+++ b/app/src/main/res/layout/drawer_category_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView android:id="@+id/card_item"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:cardElevation="4dp"
+    app:cardElevation="0dp"
     app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,24 +14,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/im_category_iamge"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/vegitables"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/tv_category_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/vegetable"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textAllCaps="false"
+            android:layout_marginLeft="5dp"
             android:textSize="14sp"
             android:fontFamily="@font/poppins_regular"
             />
