--- a/app/src/main/res/layout/products_category_item.xml
+++ b/app/src/main/res/layout/products_category_item.xml
@@ -1,79 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/card_item"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_item"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
-        android:layout_width="match_parent"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="4dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/vegitables"
-            android:scaleType="centerCrop"/>
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <FrameLayout
+            android:id="@+id/image_container"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/im_product_image"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/vegitables"/>
+
+
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_product_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:layout_gravity="start"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:layout_marginTop="2dp"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="Tomato"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/image_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+
+        <TextView
+            android:id="@+id/tv_product_quantity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="2dp"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="start"
+            android:text="1 kg"
+            android:textColor="@color/grey"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_product_name"/>
+
+
+        <TextView
+            android:id="@+id/tv_product_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="$5"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/tv_product_quantity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_add_to_cart"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/circle_button_ng"
+            android:text="+"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:visibility="visible"
+            android:layout_gravity="top|end"
+            android:layout_margin="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <LinearLayout
+            android:id="@+id/ll_add_item_to_cart"
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/circle_button_ng">
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tv_add_to_cart_minus"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tomato"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                android:gravity="start"
+                android:text="-"
                 android:textColor="@color/black"
-                android:fontFamily="@font/poppins_semibold"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="farm fresh tomato 1kg"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center"
-                android:gravity="start"
-                android:textColor="@color/black"
-                android:fontFamily="@font/poppins_regular"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="$5"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center"
-                android:gravity="start"
-                android:textColor="@color/green"
-                android:fontFamily="@font/poppins_bold" />
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_continue_otp"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Add To Bag"
-                android:textColor="@color/white"
                 android:textSize="14sp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="@null"
-                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="visible"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="2dp"
+                android:padding="5dp"
+                android:fontFamily="@font/poppins_regular"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                />
+            <TextView
+                android:id="@+id/tv_add_to_cart_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:visibility="visible"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="2dp"
+                android:padding="5dp"
+                android:fontFamily="@font/poppins_regular"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+            <TextView
+                android:id="@+id/tv_add_to_cart_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:visibility="visible"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="2dp"
+                android:padding="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/poppins_regular"
+                />
         </LinearLayout>
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-    </androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>
 
