--- a/app/src/main/res/layout-land/activity_payment.xml
+++ b/app/src/main/res/layout-land/activity_payment.xml
@@ -34,7 +34,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center_vertical"
-            android:text="Payment"
+            android:text="@string/payment"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:layout_margin="10dp"
@@ -46,20 +46,22 @@
     <ScrollView
         android:id="@+id/sv_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toTopOf="@id/button_proceed_to_payment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_toolbar">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_add_payment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Add Payment Method"
+        android:text="@string/add_payment_method"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/poppins_semibold"
-            android:text="Credit/Debit Card"
+            android:text="@string/credit_debit_card"
             android:textSize="14sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -203,9 +205,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/rounded_button"
-        android:text="Proceed To Payment"
-        android:textColor="@color/white"
+        android:text="@string/proceed_to_payment"
         android:visibility="gone"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
