--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@drawable/login_bg"
-            android:text="Grocery Plus"
+            android:text="@string/grocery_plus"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="34sp"
@@ -52,7 +52,7 @@
                 android:gravity="center"
                 android:textSize="14sp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Signup"/>
+                android:text="@string/signup"/>
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -66,7 +66,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:padding="15dp"
-        android:hint="Enter username"
+        android:maxLines="1"
+        android:imeOptions="actionNext"
+        android:inputType="textPersonName"
+        android:hint="@string/enter_username"
         android:fontFamily="@font/poppins_regular"
         android:background="@drawable/rounded_edittext"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +81,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:padding="15dp"
-        android:hint="Enter Mobile"
+        android:hint="@string/enter_mobile"
+        android:inputType="phone"
+        android:maxLength="10"
+        android:maxLines="1"
         android:fontFamily="@font/poppins_regular"
         android:background="@drawable/rounded_edittext"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +97,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:padding="15dp"
-            android:hint="Enter email"
+            android:hint="@string/enter_email_"
+            android:inputType="textEmailAddress"
             android:fontFamily="@font/poppins_regular"
             android:background="@drawable/rounded_edittext"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +111,7 @@
             android:layout_margin="20dp"
             android:padding="15dp"
             android:inputType="textPassword"
-            android:hint="Enter Password"
+            android:hint="@string/enter_password"
             android:fontFamily="@font/poppins_regular"
             android:background="@drawable/rounded_edittext"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +124,7 @@
         android:layout_margin="20dp"
         android:padding="15dp"
         android:inputType="textPassword"
-        android:hint="Enter Confirm Password"
+        android:hint="@string/enter_confirm_password"
         android:fontFamily="@font/poppins_regular"
         android:background="@drawable/rounded_edittext"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +134,7 @@
             android:id="@+id/button_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
+            android:text="@string/register"
             android:padding="10dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="@null"
@@ -160,7 +167,7 @@
                 android:id="@+id/textview_login_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Already have an account?"
+                android:text="@string/already_have_an_account"
                 android:textSize="14sp"
                 android:fontFamily="@font/poppins_regular"
                 />
@@ -168,7 +175,7 @@
                 android:id="@+id/textview_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/login"
                 android:textSize="16sp"
                 android:layout_marginStart="5dp"
                 android:textColor="@color/colorPrimary"
@@ -201,7 +208,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="14sp"
-                android:text="or"
+                android:text="@string/or"
                 android:fontFamily="@font/poppins_regular"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/line_one"
